<resources>
    <string name="app_name">Auth</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="user"> Username. </string>
    <string name="pass"> Password. </string>
    <string name="mail"> Email Address. </string>
    <string name="logout"> Logout. </string>
    <string name="title_activity_create_account">Create Account</string>

    <string name="textTop"> Provide accurate information below. </string>
    <string name="title_activity_forgot_pass">Forgot Pass</string>
    <string name="newPassText"> Provide A New Password. </string>

    <string name="forgot_pass_text"> Provide a Valid Email Address. </string>
    <string name="cont_text"> Finish Up. </string>

    <string name="title_activity_cont_account">Account.</string>
    <string name="confi_pass"> Confirm Password. </string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_new_pass">New Pass</string>
</resources>
