<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/background"
        tools:showIn="@layout/activity_cont_account"
        tools:context="frags.ContAccountFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cont_text"
            android:id="@+id/textViewFinish"
            android:gravity="center"
            android:typeface="monospace"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewFinish"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/buser" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/user"
                    android:paddingTop="22dp"
                    android:ems="10"
                    android:id="@+id/editTextUser2"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/lock"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:paddingTop="22dp"
                    android:id="@+id/editTextPass2"
                    android:hint="@string/pass"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/lock"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:paddingTop="22dp"
                    android:hint="@string/confi_pass"
                    android:id="@+id/editTextConfirmPass"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Submit."
                android:background="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:onClick="contFinish"
                android:textColor="@color/colorText"
                android:typeface="monospace"
                android:id="@+id/button4"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>


